esp/envoy-config.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# This is an envoy config that can be used to translate http -> grpc
# for developing mixer locally.
static_resources:
  listeners:
    - name: restlistener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }
      # Request buffer size limit
      per_connection_buffer_limit_bytes: 1073741824 # 1GB
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/mcp"
                          route:
                            cluster: mcp_http_server
                            timeout: 300s
                        - match:
                            prefix: "/"
                          route:
                            cluster: grpcserver
                            timeout: 60s
                http_filters:
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "mixer-grpc.pb"
                      services: ["datacommons.Mixer"]
                      convert_grpc_status: true
                      print_options:
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                      ignore_unknown_query_parameters: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: mcp_http_server
      connect_timeout: 60s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: mcp_http_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 12346
    - name: grpcserver
      connect_timeout: 60s
      # Response buffer size limit
      per_connection_buffer_limit_bytes: 1073741824 # 1GB
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: grpcserver
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 12345
